# djangopress

./: .gitignore  pyproject.toml
djangopress/: asgi.py  settings.py  urls.py  wsgi.py
djangopress/apps/blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
djangopress/apps/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_post_image.py  0004_post_subtitle.py  0005_alter_post_image_comment.py
djangopress/apps/blog/static/css/: blog.css
djangopress/apps/blog/templates/blog/: base.html  pagination.html
djangopress/apps/blog/templates/blog/post/: detail.html  list.html  share.html
djangopress/apps/blog/templates/blog/post/includes/: comment_form.html
