[tool.poetry]
name = "djangopress"
version = "0.1.0"
description = ""
authors = ["Thalison Fernandes <thalissfernandes99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
